# openapi-collector

./: .gitignore  .travis.yml  Dockerfile  Makefile  Pipfile  README.md  pyproject.toml  tox.ini
.github/: dependabot.yml
.github/workflows/: publish.yml
chart/openapi-collector/: Chart.yaml  values.yaml
chart/openapi-collector/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  service.yaml
collector/: Dockerfile  Makefile  PROJECT
collector/cmd/manager/: main.go
collector/config/default/: kustomization.yaml
collector/config/rbac/: rbac_role.yaml
collector/pkg/controller/: add_service.go
collector/pkg/controller/service/: service_controller.go  service_controller_suite_test.go  service_controller_test.go
deploy/: README.md  configmap.yaml  deployment.yaml  rbac.yaml  service.yaml
docker/: entrypoint.sh  nginx.conf
docker/collector/: Dockerfile
docker/proxy/: Dockerfile
docker/router/: Dockerfile  nginx.conf
openapi_collector/: __init__.py  cmd.py  collector.py  config_gen.py  helpers.py  main.py
openapi_proxy/: __init__.py  main.py
scripts/: integration-tests
tests/collector/: test_cmd.py  test_collector.py  test_config_gen.py  test_main.py  test_shutdown.py
tests/e2e/: conftest.py  deployment.yaml  test-resources.yaml  test_collection.py
tests/proxy/: test_replace_servers.py
