[tool.poetry]
name = "openapi-collector"
version = "0.1.6"
description = ""
authors = ["Daniel Middlecote <dan@dlmiddlecote.io>"]

[tool.poetry.dependencies]
python = "^3.9"
pykube-ng = {version = "^20.7", extras = ["gcp"]}
requests = "^2.22"
flask = "^1.1"
[tool.poetry.dev-dependencies]
flake8 = "^3.7"
pytest = "6.2.2"
pytest-cov = "^2.8"
coveralls = "2.2.0"
coverage = "^5.0"
pylint = "^2.4"
pytest-kind = "^20.1"
black = "20.8b1"
[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
